--- a/bar/src/main/resources/dummy/bar/random.properties
+++ b/bar/src/main/resources/dummy/bar/random.properties
@@ -15,5 +15,5 @@ name=${bar.name}
 vendor=${bar.vendor}
 version=${bar.version}
 package=foobar
-release=${release.version}
+release=${package.version}
 foo.version=${foo.version}
