--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
+/.emacs.desktop*
+/aclocal.m4
+/autom4te.cache
+/build
+/config.log
+/config.status
+/configure
+/Makefile
+/packages
 *~
-.emacs.desktop*
-build
-localdefs.mk
-packages
