Add version number to the native library
This will prevent the Java code to load the wrong
version of the native library.

--- a/Makefile.in
+++ b/Makefile.in
@@ -843,7 +843,7 @@ BAR_JAR_BUILD_LIST := $(bar.buildname)
 FOO_NATIVE_BUILD_LIST :=
 
 ifeq ($(ENABLE_FOO_FEATURE),yes)
-FOO_NATIVE_BUILD_LIST += $(libfoo-linux.buildname)
+FOO_NATIVE_BUILD_LIST += $(libfoo.buildname)
 endif
 
 
